actualización ejercicio empezado ayer

--- a/BootstrapEj3/index.html
+++ b/BootstrapEj3/index.html
@@ -9,32 +9,61 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-sm navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">Logo</a>
-            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavId">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opciones coches</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdownId">
-                            <a class="dropdown-item" href="comprar.html">Comprar coches</a>
-                            <a class="dropdown-item" href="venta.html">Venta coches</a>
-                        </div>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">Logo</a>
+        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavId">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-tabs">
+                    <a class="nav-link active" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opciones coches</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownId">
+                        <a class="dropdown-item" href="comprar.html">Comprar coches</a>
+                        <a class="dropdown-item" href="venta.html">Venta coches</a>
+                    </div>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Buscar">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+            </form>
+         </div>
+    </nav>
+    <div class="container">
+        <div class="card-group">
+            <div class="card">
+                <img src="images/auto-158795_1280.png" class="img-thumbnail" alt="Cinque Terre" width="275" height="200"> 
+                <div class="card-body">
+                    <h4 class="card-title">Opel Corsa</h4>
+                    <p class="card-text">Esto es un prueba de texto, esta web esta dirigida a la venta de coche.</p>
+                </div>
             </div>
-        </nav>
+            <div class="card">
+                <img src="images/plymouth-796441_1280.jpg" class="img-thumbnail" alt="Cinque Terre" width="275" height="200"> 
+                <div class="card-body">
+                    <h4 class="card-title">Opel Corsa</h4>
+                    <p class="card-text">Esto es un prueba de texto, esta web esta dirigida a la venta de coche.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="images/auto-158795_1280.png" class="img-thumbnail" alt="Cinque Terre" width="275" height="200"> 
+                <div class="card-body">
+                    <h4 class="card-title">Opel Corsa</h4>
+                    <p class="card-text">Esto es un prueba de texto, esta web esta dirigida a la venta de coche.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="images/plymouth-796441_1280.jpg" class="img-thumbnail" alt="Cinque Terre" width="275" height="200"> 
+                <div class="card-body">
+                    <h4 class="card-title">Opel Corsa</h4>
+                    <p class="card-text">Esto es un prueba de texto, esta web esta dirigida a la venta de coche.</p>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
