--- a/BootstrapEj3/venta.html
+++ b/BootstrapEj3/venta.html
@@ -9,63 +9,68 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-sm navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">Logo</a>
-            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavId">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opciones coches</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdownId">
-                            <a class="dropdown-item" href="comprar.html">Comprar coches</a>
-                            <a class="dropdown-item" href="venta.html">Venta coches</a>
-                        </div>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <a class="navbar-brand" href="index.html">Logo</a>
+      <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavId">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-tabs">
+            <a class="nav-link" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opciones coches</a>
+            <div class="dropdown-menu" aria-labelledby="dropdownId">
+              <a class="dropdown-item" href="comprar.html">Comprar coches</a>
+              <a class="dropdown-item active" href="venta.html">Venta coches</a>
             </div>
-        </nav>
-        <div class="container">
-            <form>
-                <div class="form-group row">
-                  <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-                  <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-                  <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <div class="col-sm-2">Checkbox</div>
-                  <div class="col-sm-10">
-                    <div class="form-check">
-                  <label class="form-check-label">
-                    <input class="form-check-input" type="checkbox"> Check me out
-                  </label>
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <div class="col-sm-10">
-                    <button type="submit" class="btn btn-primary">Sign in</button>
-                  </div>
-                </div>
-              </form>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Buscar">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+        </form>
+      </div>
+    </nav>
+    <div class="container">
+      <form>
+        <div class="form-group row">
+          <label for="inputNombre3" class="col-sm-2 col-form-label">Nombre completo</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputNombre3" placeholder="Nombre completo">
+          </div>
         </div>
+        <div class="form-group row">
+          <label for="inputTLF3" class="col-sm-2 col-form-label">Teléfono de contacto</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputTLF3" placeholder="Teléfono de contacto">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="sel1">Marca del vehiculo:</label>
+            <select class="form-control" id="sel1" name="sellist1">
+              <option>Selecciona una marca</option>
+              <option>Opel</option>
+              <option>Citroen</option>
+              <option>Mazda</option>
+              <option>Ford</option>
+            </select>
+        </div>
+        <div class="form-group row">
+          <label for="comment">Comentario sobre el estado del vehiculo:</label>
+          <textarea class="form-control" rows="5" id="comment"></textarea>
+        </div>
+        <div class="form-group row">
+            <label for="comment">Imagenes del vehiculo:</label>
+            <input type="file" class="form-control-file border" name="file">
+        </div>
+        <div class="form-group row">
+          <div class="col-sm-10">
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </div>
+        </div>
+      </form>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
