--- a/BootstrapEj3/comprar.html
+++ b/BootstrapEj3/comprar.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="custom.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Logo</a>
+        <a class="navbar-brand" href="index.html"><img src="images/Logo.png" class="img-thumbnail" width="250" height="175"></a>
             <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -99,6 +101,14 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+    <br>
+    <br>
+    <div id="footer">
+        <div id="social">
+            <a href="https://twitter.com/?lang=es" target="_blank"><i class="fab fa-twitter"></a></i><a href="https://es-es.facebook.com/" target="_blank"><i class="fab fa-instagram"></a></i><a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-facebook"></a></i><br>
+        </div>
+        <small>&copy; 2019 Royal Kobe S.L. Todos los derechos reservados. </small>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
