--- a/BootstrapEj3/index.html
+++ b/BootstrapEj3/index.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="custom.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Logo</a>
+        <a class="navbar-brand" href="index.html"><img src="images/Logo.png" class="img-thumbnail" width="250" height="175"></a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,36 +36,47 @@
          </div>
     </nav>
     <div class="container">
+        <br>
+        <p>Somos una empresa de compra venta de coches, somos serios. Todos nuestros coches tienen seis meses de garantía. Podéis contactar con nosotros para cualquier cosa.</p>
+        <br>
         <div class="card-group">
             <div class="card">
-                <img src="images/auto-158795_1280.png" class="img-thumbnail" alt="Cinque Terre" width="275" height="200"> 
+                <img src="images/auto-158795_1280.png" class="img-thumbnail" width="275" height="200"> 
                 <div class="card-body">
                     <h4 class="card-title">Opel Corsa</h4>
-                    <p class="card-text">Esto es un prueba de texto, esta web esta dirigida a la venta de coche.</p>
+                    <p class="card-text">Corsa de cinco puerta de color rojo, utilizado para renting. En muy buen estado. Con 100.000Km</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/plymouth-796441_1280.jpg" class="img-thumbnail" alt="Cinque Terre" width="275" height="200"> 
+                <img src="images/plymouth-796441_1280.jpg" class="img-thumbnail" width="275" height="200"> 
                 <div class="card-body">
-                    <h4 class="card-title">Opel Corsa</h4>
-                    <p class="card-text">Esto es un prueba de texto, esta web esta dirigida a la venta de coche.</p>
+                    <h4 class="card-title">Opel Astra</h4>
+                    <p class="card-text">Astra de cinco puerta de color blanco, semi-nuevo. Con 20.000Km</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/auto-158795_1280.png" class="img-thumbnail" alt="Cinque Terre" width="275" height="200"> 
+                <img src="images/auto-158795_1280.png" class="img-thumbnail" width="275" height="200"> 
                 <div class="card-body">
-                    <h4 class="card-title">Opel Corsa</h4>
-                    <p class="card-text">Esto es un prueba de texto, esta web esta dirigida a la venta de coche.</p>
+                    <h4 class="card-title">Citroen C3</h4>
+                    <p class="card-text">C3 de cinco puerta de color plata. Coche con KM-0, sin apenas uso.</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/plymouth-796441_1280.jpg" class="img-thumbnail" alt="Cinque Terre" width="275" height="200"> 
+                <img src="images/plymouth-796441_1280.jpg" class="img-thumbnail" width="275" height="200"> 
                 <div class="card-body">
-                    <h4 class="card-title">Opel Corsa</h4>
-                    <p class="card-text">Esto es un prueba de texto, esta web esta dirigida a la venta de coche.</p>
+                    <h4 class="card-title">Ford Fiesta</h4>
+                    <p class="card-text">Fista de tres puerta de color rojo, utilizado para renting. En muy buen estado. Con 80.000Km</p>
                 </div>
             </div>
         </div>
+    </div>
+    <br>
+    <br>
+    <div id="footer">
+        <div id="social">
+            <a href="https://twitter.com/?lang=es" target="_blank"><i class="fab fa-twitter"></a></i><a href="https://es-es.facebook.com/" target="_blank"><i class="fab fa-instagram"></a></i><a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-facebook"></a></i><br>
+        </div>
+        <small>&copy; 2019 Royal Kobe S.L. Todos los derechos reservados. </small>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
