Corrección de pequeño error.

--- a/Tema 3/BootstrapEj3/index.html
+++ b/Tema 3/BootstrapEj3/index.html
@@ -76,7 +76,7 @@
         <div id="social">
             <a href="https://twitter.com/?lang=es" target="_blank"><i class="fab fa-twitter"></a></i><a href="https://es-es.facebook.com/" target="_blank"><i class="fab fa-instagram"></a></i><a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-facebook"></a></i><br>
         </div>
-        <small>&copy; 2019 Royal Kobe S.L. Todos los derechos reservados. </small>
+        <small>&copy; 2019 Todos los derechos reservados.</small>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
