Adelanto vue Api Games
Trabajando con carrusel en la lista de juegos, no muestra nada.

--- a/vueGame/index.html
+++ b/vueGame/index.html
@@ -12,8 +12,8 @@
   <body>
     <div class="container" id="app">
         <h3 class="text-center">Plataforms</h3>
-        <ul v-for="platform in platforms">
-            <li>{{platform.name}}</li>
+        <ul>
+            <li v-for="platform in platforms">{{platform.name}}</li>
         </ul>
     </div>
     <!-- Optional JavaScript -->
