--- a/vueGame/genres.html
+++ b/vueGame/genres.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Main - Games</title>
+    <title>Genres - Games</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container" id="app">
-        <h3 class="text-center">Plataforms</h3>
-        <ul>
-            <li v-for="platform in platforms"><a v-bind:href="'plataforma.html?id='+platform.id">{{platform.name}}</a></li>
-        </ul>
+    <div class="container" id="genres">
+        <span v-for="int in info">
+        <h3 class="text-center">{{int.name}}</h3>
+            <ul v-for="game in int.games">
+                <li>{{game.name}}</li>
+            </ul>
+        </span>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
