--- a/vueGame/list-game.html
+++ b/vueGame/list-game.html
@@ -11,42 +11,45 @@
   </head>
   <body>
     <div class="container" id="games">
-        <span v-for="int in info">
-            <h3 class="text-center">{{int.name}}</h3>
-            Release Date: {{int.released}}<br>
-            Genres: 
-            <span v-for="intplat in int.genres">
-                {{intplat.name}}&nbsp;
-            </span>
-            <br>
-            Platforms:
-            <span v-for="intplat in int.platforms">
-              {{intplat.platform.name}}&nbsp;
-            </span>
-            <br>
-            Store:
-            <span v-for="intstore in int.stores">
-              <a :href="intstore.url_en">{{intstore.store.name}}</a>&nbsp;
-            </span>
-            <br>
-            <div id="carouselControls" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item" v-for="intimg in int.short_screenshots">
-                  <img class="d-block w-100" :src="intimg.image">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
+      <span v-for="int in info">
+        <h3 class="text-center">{{int.name}}</h3>
+        <div v-bind:id="'carouselControls'+int.id" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" v-for="intimg in int.short_screenshots" v-if="intimg.id == -1">
+              <img class="d-block w-100" :src="intimg.image">
             </div>
-            <br>
-            <br>
+            <div class="carousel-item" v-else>
+              <img class="d-block w-100" :src="intimg.image">
+            </div> 
+          </div>
+          <a class="carousel-control-prev" v-bind:href="'#carouselControls'+int.id" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" v-bind:href="'#carouselControls'+int.id" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <br>
+        Release Date: {{int.released}}<br>
+        Genres: 
+        <span v-for="intplat in int.genres">
+          {{intplat.name}}&nbsp;
         </span>
+        <br>
+        Platforms:
+        <span v-for="intplat in int.platforms">
+          {{intplat.platform.name}}&nbsp;
+        </span>
+        <br>
+        Store:
+        <span v-for="intstore in int.stores">
+          <a :href="intstore.url_en">{{intstore.store.name}}</a>&nbsp;
+        </span>
+        <br>
+        <br>
+      </span>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
