--- a/vueGame/platforms.html
+++ b/vueGame/platforms.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Main - Games</title>
+    <title>Platforms - Games</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,11 +10,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container" id="app">
-        <h3 class="text-center">Plataforms</h3>
-        <ul>
-            <li v-for="platform in platforms"><a v-bind:href="'plataforma.html?id='+platform.id">{{platform.name}}</a></li>
-        </ul>
+    <div class="container" id="platforms">
+        <h3 class="text-center">{{info.name}}</h3>
+        <span v-html="info.description"></span>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
